@@ -1,6 +1,7 @@
 Changes for 2.3.2
 
 New features:
+..F....... [ZBX-8113] setup now stores info in session instead of cookies (Andrejs)
 
 Bug fixes:
 ........S. [ZBX-7901] improved value cache database operations when caching count based requests (wiper)
